Fix spacing of items in iotd queues

--- a/astrobin/static/css/astrobin.less
+++ b/astrobin/static/css/astrobin.less
@@ -4691,11 +4691,11 @@ table.search-table {
 
 .iotd-queue-item {
     display: inline-block;
-    margin-bottom: 10px;
+    margin-bottom: 22px;
     position: relative;
 
-    &:nth-child(odd) {
-        margin-right: 10px;
+    &:nth-child(even) {
+        margin-right: 16px;
     }
 
     >.iotd-queue-item-actions {
